:wastebasket: fix width on layout for horizontal scroll bar on large screens

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   min-height: 100vh;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   overflow: visible;
   &--isOpened {
     position: fixed;
